--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.1.0
+  provider: ^6.0.5
+  date_field: ^3.0.5
 
 dev_dependencies:
   flutter_test:
