--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   http: ^1.1.0
   provider: ^6.0.5
   date_field: ^3.0.5
+  flutter_local_notifications: ^15.1.1
+  firebase_core: ^2.16.0
+  firebase_messaging: ^14.6.8
+  firebase_auth: ^4.10.0
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - android/app/src/main/res/drawable/task_icon.png
     # - assets/images/task_icon.png
   #   - images/a_dot_ham.jpeg
 
