--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   http: ^1.1.0
   provider: ^6.0.5
   date_field: ^3.0.5
-  flutter_local_notifications: ^15.1.1
+  flutter_local_notifications: ^13.0.0
   firebase_core: ^2.16.0
   firebase_messaging: ^14.6.8
   firebase_auth: ^4.10.0
+  timezone: ^0.9.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
